# beeline

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  config.example.sh  config.example.toml
apps/desktop/: README.md  package.json  pnpm-lock.yaml
apps/desktop/src/: index.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/control/: Cargo.toml
crates/control/src/: lib.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: auth.rs  config.rs  lib.rs  local_ids.rs  policy.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: gmail.rs  lib.rs  microsoft.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  lib.rs  secrets.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: security.md
scripts/: build-macos.sh
